<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".PickupFragment"
    >

    <data>

        <variable
            name="viewModel"
            type="com.example.simpleweather.models.AppViewModel"
            />

        <variable
            name="pickupFragment"
            type="com.example.simpleweather.PickupFragment"
            />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/side_margin"
            >

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_start_typing"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onTextChanged="@{(s, x, y, z) -> pickupFragment.onSearchQueryChanged.invoke(s.toString())}"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/additional_how_to"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_search"
                android:text="@string/additional_how_to"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/search_options_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:padding="6dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/additional_how_to"
                app:listData="@{pickupFragment.results}"
                app:spanCount="1"
                tools:itemCount="3"
                tools:listitem="@layout/search_list_view_item"
                />

            <View
                android:id="@+id/divider"
                style="@style/Widget.Cupcake.Divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/side_margin"
                android:layout_marginBottom="@dimen/side_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_options_list"
                />

            <Button
                android:id="@+id/cancel_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:onClick="@{() -> pickupFragment.cancel()}"
                android:text="@string/cancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>